@@ -1,4 +1,6 @@
 1.2.14.dev0
+ * #103: When generating sample configuration with generate-borgmatic-config, document the defaults
+   for each option.
  * #116: When running multiple configuration files, attempt all configuration files even if one of
    them errors. Log a summary of results at the end.
 
